# ChangeLog for app-laptop/tlp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tlp-0.3.3-r0 (23 Sep 2011)
	23 Sep 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r0.ebuild :

	tlp-0.3.3

*tlp-0.3.2-r3 (27 Jul 2011)

	27 Jul 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.2-r3.ebuild :

	Install tlp-ifup into /usr/share/tlp-pm as it is a read-only,
	not executable text file.


*tlp-0.3.2-r2 (24 Jul 2011)

	24 Jul 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.2-r2.ebuild :

	0.3.2-r2 uses the reimplementation of net-action in the eselect script.


*tlp-0.3.2-r1 (23 Jul 2011)

	23 Jul 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.2-r1.ebuild :

	0.3.2-r1 removes the broken net-action in the eselect script.


*tlp-0.3.2-r0 (22 Jul 2011)

	22 Jul 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.2-r0.ebuild, metadata.xml :

	Initial import.
	TLP is a collection of scripts enabling laptop-mode and
	implementing power save features for laptop hardware.