@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlp-0.3.3-r1 (23 Sep 2011)
+	23 Sep 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r1.ebuild :
+
+	use standard/upstream zztlp script
+
 *tlp-0.3.3-r0 (23 Sep 2011)
 	23 Sep 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r0.ebuild :
 
